Updated some text

--- a/src/feature_engineering.ipynb
+++ b/src/feature_engineering.ipynb
@@ -696,7 +696,7 @@
     "    4: \"Low Activity Coins\"\n",
     "}\n",
     "\n",
-    "# You should adjust these names based on actual cluster characteristics\n",
+    "# We should adjust these names based on actual cluster characteristics\n",
     "features_df['cluster_name'] = features_df['kmeans_cluster'].map(cluster_names)"
    ]
   },
